# kubeman

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  __init__.py  chart.py  docker.py  kubernetes.py  pyproject.toml  register.py  template.py
.github/workflows/: publish.yml  test.yml
examples/fullstack/: README.md  backend.py  frontend.py  init.sql  kubeman.py  postgres_db.py  templates.py
examples/fullstack/backend/: database.py  main.py  models.py
examples/fullstack/docs/: visualization.dot
examples/fullstack/frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
examples/fullstack/frontend/public/: config.js
examples/fullstack/frontend/src/: App.tsx  index.css
examples/fullstack/templates/: backend.py  frontend.py  postgres_db.py
examples/kafka/: Dockerfile.consumer  Dockerfile.producer  README.md  consumer_app.py  kafka_example.py  kubeman.py  producer_app.py  requirements.txt  stock_price_consumer.py  stock_price_producer.py  templates.py
examples/kafka/docs/: visualization.dot
examples/kafka/templates/: kafka_example.py  stock_price_consumer.py  stock_price_producer.py
examples/spark/: Dockerfile.pyspark  README.md  custom_pyspark_job.py  kubeman.py  pyspark_example.py  spark_application.py  spark_operator.py  templates.py
examples/spark/docs/: visualization.dot
examples/spark/templates/: custom_pyspark_job.py  spark_operator.py
kubeman/: __init__.py  argocd.py  chart.py  cli.py  config.py  docker.py  executor.py  git.py  kubernetes.py  output.py  register.py  resource_utils.py  template.py  visualize.py
tests/: __init__.py  conftest.py  test_chart.py  test_cli.py  test_docker.py  test_git.py  test_kubernetes_resource.py  test_register.py  test_visualize.py
